--- a/_posts/2017-8-6-0000.md
+++ b/_posts/2017-8-6-0000.md
@@ -5,7 +5,8 @@ title: 作ってみました(2017/8/6)
 
 yahoo知恵袋に
 <https://detail.chiebukuro.yahoo.co.jp/qa/question_detail/q11177605921#a434296690>
-こんなのがあったからとりあえず作って見た
+こんな質問があったのでとりあえず作って見た
+newname.appにファイルをドラッグンドドロップすると保存先フォルダの選択画面が出て選択するとその中に空ファイルが作成されます。
 newname version 1.0 (2017/8/5)
 <https://pan.baidu.com/s/1eSF1fVk>
 <https://mega.nz/#!O5MykBgC!M0ZnxxUTvUm273Uf4RJEzB2uBMKEru2b5iDNEwcboGs>
